# coracle-chat-flutter

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
ios/: guide.txt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/components/: example_modal_content.dart  home_page.dart  profile_page.dart  settings_page.dart  simple_example.dart  zap_expandable_tile.dart  zaplab_example.dart  zaplab_modal_content.dart
lib/app/navigation/: app_router.dart  dialog_page.dart  responsive_scaffold.dart  sidebar_navigation.dart
lib/core/: index.dart
lib/core/bridge/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/core/bridge/api/: nostr.dart  simple.dart
lib/core/bridge/nostr/: models.dart
lib/core/state/: nostr_provider.dart
lib/patches/zaplab_design/: README.md  maintainers.yaml  pubspec.yaml
lib/patches/zaplab_design/lib/: zaplab_design.dart
linux/flutter/: generated_plugins.cmake
macos/: guide.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rust/: Cargo.toml  justfile
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  nostr.rs  simple.rs
rust/src/ignore_me/: mod.rs
rust/src/nostr/: mod.rs  models.rs  services.rs
rust/src/old/: mandelbrot.rs  mandelbrot_related.rs  mod.rs
web/: flutter_bootstrap.js  flutter_service_worker.js  guide.txt  index.html
web/assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
windows/flutter/: generated_plugins.cmake
(+203 files in other folders)
