[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.11.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
num = "0.4"
image = "0.24.3"
crossbeam = "0.8"
nostr-sdk = "0.32.0"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bech32 = "0.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
